Fixed centering tutorials on mobile and fixec background on landscape mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,8 @@ h1 {
     min-height: 100vh;
     background-size: cover;
     background-position: center;
-    background-color: grey;
-}
-
-@media (min-width: 899px) {
-    .App {
-        background-image: url("assets/baseball-field-background.jpg");
-        background-size: cover;
-        height: 100vh;
-    }
+    background: grey;
+    background-size: cover;
 }
 
 .bold {
@@ -24,9 +17,10 @@ h1 {
     font-size: larger;
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (min-height: 500px) {
     .App {
         background-image: url("assets/baseball-field-background.jpg");
         background-size: cover;
+        min-height: 100vh;
     }
 }
