--- a/src/Layouts/TutorialsLayout.css
+++ b/src/Layouts/TutorialsLayout.css
@@ -11,16 +11,15 @@ iframe {
     font-weight: 500;
     max-width: 325px;
     background-color: var(--angels-maroon);
+    margin: auto;
 }
 
 /* Sets background image for Ipad mini - Ipad tablet sizes */
 @media (min-width: 768px) and (max-width: 991px) {
     .tutorials-container {
-        background-image: url("../assets/baseball-field-background.jpg");
         background-size: cover;
         display: flex;
         flex-direction: column;
         justify-content: start;
-        height: 90vh;
     }
 }
